Debugging data being pushed multiple times
